subprojects: add lame

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ project(
     'flac:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
+    'lame:default_library=static',
     'liburing:default_library=static',
     'ogg:default_library=static',
     'openssl:default_library=static',
@@ -33,6 +34,8 @@ project(
     'flac:warning_level=0',
     'fmt:warning_level=0',
     'gtest:warning_level=0',
+    'lame:werror=false',
+    'lame:warning_level=0',
     'liburing:warning_level=0',
     'sqlite3:warning_level=0',
     'oggiopus:werror=false',
@@ -71,6 +74,8 @@ project(
     'curl:smtp=disabled',
     'curl:telnet=disabled',
     'curl:tftp=disabled',
+    'lame:decoder=false',
+    'lame:tools=disabled',
     'openssl:build_cli=false',
     'openssl:asm=disabled', # work around "call to undeclared function "asm" on Android
     'opus:docs=disabled',
