subprojects: add lame

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ project(
     'flac:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
+    'lame:default_library=static',
     'libmicrohttpd:default_library=static',
     'libmpdclient:default_library=static',
     'libnpupnp:default_library=static',
@@ -36,6 +37,8 @@ project(
     'flac:warning_level=0',
     'fmt:warning_level=0',
     'gtest:warning_level=0',
+    'lame:werror=false',
+    'lame:warning_level=0',
     'libmicrohttpd:warning_level=0',
     'libnpupnp:warning_level=0',
     'liburing:warning_level=0',
@@ -76,6 +79,8 @@ project(
     'curl:smtp=disabled',
     'curl:telnet=disabled',
     'curl:tftp=disabled',
+    'lame:decoder=false',
+    'lame:tools=disabled',
     'libmpdclient:documentation=false',
     'libmpdclient:test=false',
     'openssl:build_cli=false',
