--- a/android/meson.build
+++ b/android/meson.build
@@ -15,9 +15,9 @@ android_aidl = join_paths(android_build_tools_dir, 'aidl')
 android_aapt = join_paths(android_build_tools_dir, 'aapt')
 android_dx = join_paths(android_build_tools_dir, 'dx')
 android_zipalign = join_paths(android_build_tools_dir, 'zipalign')
+android_apksigner = join_paths(android_build_tools_dir, 'apksigner')
 
 javac = find_program('javac')
-apksigner = find_program('apksigner')
 rsvg_convert = find_program('rsvg-convert')
 convert = find_program('convert')
 zip = find_program('zip')
