android: migrate app build system to use gradle
Most of the Android specific meson code has been removed and replaced with
the grade build system.

The new meson build scripts build and move the libmpd.so binaries into the correct
location that gradle expects. After than gradle handles building the rest of the Android app.

Icons and banners have been updated for the modern app packaging expectations.

For reference here was the figma template Google provides that I used to back the png versions
for older versions of Android <https://www.figma.com/community/file/1283953738855070149>

--- a/android/apk/meson.build
+++ b/android/apk/meson.build
@@ -1,58 +1,13 @@
-unsigned_apk = custom_target(
-  'mpd-unsigned.apk',
-  output: 'mpd-unsigned.apk',
-  input: [mpd, classes_dex, resources_apk[0]],
+android_abi = get_option('android_abi')
+
+mpd_so = custom_target(
+  'libmpd.so',
+  output: 'libmpd.so',
+  input: mpd,
   command: [
-    join_paths(meson.current_source_dir(), 'make-unsigned-apk.sh'),
-    android_abi,
-    get_option('android_strip'),
-    zip,
-    '@OUTPUT0@',
+    'cp',
     '@INPUT@',
+    join_paths(meson.current_source_dir(), '../app/src/main/jnilibs/', android_abi),
   ],
+  build_by_default: true
 )
-
-aligned_apk = custom_target(
-  'mpd-aligned.apk',
-  output: 'mpd-aligned.apk',
-  input: unsigned_apk,
-  command: [
-    android_zipalign,
-    '-f', '4',
-    '@INPUT@', '@OUTPUT@',
-  ],
-)
-
-if get_option('android_debug_keystore') != ''
-  debug_apk = custom_target(
-    'mpd-debug.apk',
-    output: 'mpd-debug.apk',
-    input: aligned_apk,
-    command: [
-      android_apksigner, 'sign',
-      '--in', '@INPUT@',
-      '--out', '@OUTPUT@',
-      '--debuggable-apk-permitted',
-      '-ks', get_option('android_debug_keystore'),
-      '--ks-key-alias', 'androiddebugkey',
-      '--ks-pass', 'pass:android',
-    ],
-    build_by_default: true
-  )
-endif
-
-if get_option('android_keystore') != '' and get_option('android_keyalias') != '' and get_option('android_keypass') != ''
-  unaligned_apk = custom_target(
-    'mpd.apk',
-    output: 'mpd.apk',
-    input: aligned_apk,
-    command: [
-      android_apksigner, 'sign',
-      '--in', '@INPUT@',
-      '--out', '@OUTPUT@',
-      '-ks', get_option('android_keystore'),
-      '--ks-key-alias', get_option('android_keyalias'),
-      '--ks-pass', 'pass:' + get_option('android_keypass'),
-    ],
-  )
-endif
