meson.build: disable "openssl:asm"
Work around "call to undeclared function "asm" on Android.

--- a/meson.build
+++ b/meson.build
@@ -72,6 +72,7 @@ project(
     'curl:telnet=disabled',
     'curl:tftp=disabled',
     'openssl:build_cli=false',
+    'openssl:asm=disabled', # work around "call to undeclared function "asm" on Android
     'opus:docs=disabled',
     'opus:extra-programs=disabled',
     'opus:tests=disabled',
