subprojects: add libmpdclient wrap

--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ project(
     'fmt:default_library=static',
     'gtest:default_library=static',
     'libmicrohttpd:default_library=static',
+    'libmpdclient:default_library=static',
     'libnpupnp:default_library=static',
     'liburing:default_library=static',
     'ogg:default_library=static',
@@ -75,6 +76,8 @@ project(
     'curl:smtp=disabled',
     'curl:telnet=disabled',
     'curl:tftp=disabled',
+    'libmpdclient:documentation=false',
+    'libmpdclient:test=false',
     'openssl:build_cli=false',
     'openssl:asm=disabled',
     'opus:docs=disabled',
