--- a/meson.build
+++ b/meson.build
@@ -104,7 +104,7 @@ version_conf.set_quoted('PACKAGE', meson.project_name())
 version_conf.set_quoted('PACKAGE_NAME', meson.project_name())
 version_conf.set_quoted('VERSION', meson.project_version())
 version_conf.set_quoted('PROTOCOL_VERSION', '0.24.0')
-configure_file(output: 'Version.h', configuration: version_conf)
+configure_file(output: 'MPDVersion.h', configuration: version_conf)
 
 conf = configuration_data()
 conf.set_quoted('SYSTEM_CONFIG_FILE_LOCATION', join_paths(get_option('prefix'), get_option('sysconfdir'), 'mpd.conf'))
