--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -47,23 +47,11 @@ jobs:
             quilt 
           pip3 install --user meson==1.3.0
             
-      - name: Install SDK
-        run: |
-          cd /opt
-          mkdir -p android-sdk/cmdline-tools/latest
-          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-          unzip commandlinetools-linux-10406996_latest.zip -d commandlinetools
-          mv commandlinetools/cmdline-tools/* ./android-sdk/cmdline-tools/latest
-          yes | /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager --update
-          yes | /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-          /opt/android-sdk/cmdline-tools/latest/bin/sdkmanager --install "build-tools;29.0.3" "platforms;android-29" "ndk;26.1.10909125"
-          cd -
-
       - name: Build
         run: |
           mkdir -p output/android
           cd ./output/android
-          ../../android/build.py /opt/android-sdk /opt/android-sdk/ndk/26.1.10909125 arm64-v8a \
+          ../../android/build.py $ANDROID_SDK_ROOT $ANDROID_NDK_LATEST_HOME arm64-v8a \
             --buildtype=debugoptimized -Db_ndebug=true \
             -Dwrap_mode=forcefallback 
 
