--- a/android/meson.build
+++ b/android/meson.build
@@ -14,21 +14,4 @@ android_sdk_platform_dir = join_paths(android_sdk, 'platforms', android_sdk_plat
 
 android_gradlew = join_paths(meson.current_source_dir(), 'gradlew')
 
-javac = find_program('javac')
-
-common_cppflags += '-I' + join_paths(meson.current_build_dir(), 'include')
-
-bridge_header = custom_target(
-  'org_musicpd_Bridge.h',
-  output: 'org_musicpd_Bridge.h',
-  input: [
-    'app/src/main/java/org/musicpd/Bridge.java',
-  ],
-  command: [
-    join_paths(meson.current_source_dir(), 'run-javac.sh'),
-    javac,
-    join_paths(android_sdk_platform_dir, 'android.jar'),
-    '@OUTDIR@',
-    '@INPUT@',
-  ],
-)
+subdir('include')
