android/include/meson.build: generate *.class in @PRIVATE_DIR@
We're not interested in the *.class files, we run javac only to
generate the JNI header.  By using @PRIVATE_DIR@, it gets stored to a
directory we can ignore, and not into the source tree.

--- a/android/include/meson.build
+++ b/android/include/meson.build
@@ -13,6 +13,10 @@ bridge_header = custom_target(
     '-source', '1.8', '-target', '1.8',
     '-Xlint:-options',
     '-cp', join_paths(android_sdk_platform_dir, 'android.jar'),
+
+    # not interested in *.class, we only want the JNI header
+    '-d', '@PRIVATE_DIR@',
+
     '-h', '@OUTDIR@',
     '@INPUT@',
   ],
