subprojects: add id3tag

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ project(
     'flac:default_library=static',
     'fmt:default_library=static',
     'gtest:default_library=static',
+    'id3tag:default_library=static',
     'lame:default_library=static',
     'libmicrohttpd:default_library=static',
     'libmpdclient:default_library=static',
@@ -37,6 +38,8 @@ project(
     'flac:warning_level=0',
     'fmt:warning_level=0',
     'gtest:warning_level=0',
+    'id3tag:werror=false',
+    'id3tag:warning_level=0',
     'lame:werror=false',
     'lame:warning_level=0',
     'libmicrohttpd:warning_level=0',
