android: Add new SongInfo class to the jni bridge
This class will allow us to send up the equivalent of print_song_info to the
bridge class.

--- a/android/include/meson.build
+++ b/android/include/meson.build
@@ -5,6 +5,7 @@ bridge_header = custom_target(
   output: 'org_musicpd_Bridge.h',
   input: [
     '../app/src/main/java/org/musicpd/Bridge.java',
+    '../app/src/main/java/org/musicpd/models/SongInfo.java',
   ],
   command: [
     javac,
