android: Add functions to convert DetachedSong to Java SongInfo object
This moves all the song tags into the hashmap and moves that into the song info object along with duration and the song uri.

It makes sure to clean up local references except for the values passed through in return.

In the future we could prefetch or cache the jni field IDs to get a bit of a performance improvement.

--- a/meson.build
+++ b/meson.build
@@ -438,6 +438,7 @@ else
     'src/android/AudioManager.cxx',
     'src/android/Environment.cxx',
     'src/android/LogListener.cxx',
+    'src/android/Song.cxx',
   ]
 endif
 
