util/NumberParser: rename to CNumberParser
A new NumberParser library based on std::from_chars() will be added.

--- a/src/util/meson.build
+++ b/src/util/meson.build
@@ -3,7 +3,7 @@ util = static_library(
   'Exception.cxx',
   'UTF8.cxx',
   'MimeType.cxx',
-  'NumberParser.cxx',
+  'CNumberParser.cxx',
   'TruncateString.cxx',
   'StringStrip.cxx',
   'StringUtil.cxx',
