Added support for HTTP basic authentication for streaming server

--- a/doc/mpdconf.example
+++ b/doc/mpdconf.example
@@ -283,6 +283,7 @@ input {
 #	bitrate		"128"			# do not define if quality is defined
 #	format		"44100:16:1"
 #	max_clients	"0"			# optional 0=no limit
+#	password		"secretPassword"	# optional, enables HTTP Basic authentication with set password
 #}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
