android: Correctly move the libmpd.so output
libmpd.so was getting written as a file called `arm64-v8a` instead of `arm64-v8a/libmpd.so`

--- a/android/apk/meson.build
+++ b/android/apk/meson.build
@@ -5,7 +5,7 @@ mpd_so = custom_target(
   output: 'libmpd.so',
   input: mpd,
   command: [
-    'cp',
+    'move_mpdlib.sh',
     '@INPUT@',
     join_paths(meson.current_source_dir(), '../app/src/main/jnilibs/', android_abi),
   ],
