meson.build: suppress -Wnan-infinity-disabled (clang 18) due to libfmt

--- a/meson.build
+++ b/meson.build
@@ -76,6 +76,9 @@ test_common_flags = [
 
   # suppress bogus GCC12 warnings in libfmt headers
   '-Wno-stringop-overflow',
+
+  # libfmt causes this warning due to -ffast-math
+  '-Wno-nan-infinity-disabled',
 ]
 
 test_global_cxxflags = test_global_common_flags + [
