android: Update to NDK 27

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -42,12 +42,17 @@ jobs:
             ninja-build \
             quilt 
           pip3 install --user meson==1.3.0
+
+      # todo: remove once NDK 27 is out of beta
+      - name: Install Beta NDK
+        run: |
+          echo y | ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager "ndk;27.0.11718014"    
             
       - name: Build
         run: |
           mkdir -p output/android
           cd ./output/android
-          ../../android/build.py $ANDROID_SDK_ROOT $ANDROID_NDK_LATEST_HOME arm64-v8a \
+          ../../android/build.py $ANDROID_SDK_ROOT $ANDROID_SDK_ROOT/ndk/27.0.11718014 arm64-v8a \
             --buildtype=debugoptimized -Db_ndebug=true \
             -Dwrap_mode=forcefallback 
 
