android: Always force wrap deps
This ensures that android is always built with the deps we build
with wrap.

Also put back the asm disable for openssl since the version we use needs
that flag

--- a/meson.build
+++ b/meson.build
@@ -85,6 +85,7 @@ project(
     'libmpdclient:documentation=false',
     'libmpdclient:test=false',
     'openssl:build_cli=false',
+    'openssl:asm=disabled',
     'opus:docs=disabled',
     'opus:extra-programs=disabled',
     'opus:tests=disabled',
