--- a/src/lib/fmt/meson.build
+++ b/src/lib/fmt/meson.build
@@ -11,6 +11,7 @@ endif
 fmt = static_library(
   'fmt',
   'RuntimeError.cxx',
+  'SocketAddressFormatter.cxx',
   'SystemError.cxx',
   include_directories: inc,
   dependencies: libfmt,
