lib/fmt/ExceptionFormatter: un-inline to reduce header dependencies

--- a/src/lib/fmt/meson.build
+++ b/src/lib/fmt/meson.build
@@ -10,6 +10,7 @@ endif
 
 fmt = static_library(
   'fmt',
+  'ExceptionFormatter.cxx',
   'RuntimeError.cxx',
   'SocketAddressFormatter.cxx',
   'SystemError.cxx',
