--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -25,7 +25,7 @@ permissions:
 
 jobs:
   build-android:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - id: checkout
         uses: actions/checkout@v4
@@ -34,10 +34,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            ninja-build \
+            meson \
             ccache \
             quilt 
-          pip3 install --user meson==1.3.0
 
       - id: cache-ccache
         uses: hendrikmuhs/ccache-action@v1
