.github/workflows/build.yml: add Meson option "--wrap-mode nofallback"
The library setup should be well-defined without implicit downloads.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,6 +102,7 @@ jobs:
             -Dtest=true \
             -Dsystemd=enabled \
             -Dpcre=enabled \
+            --wrap-mode nofallback \
             --force-fallback-for=fmt \
             output/full
 
@@ -128,6 +129,7 @@ jobs:
             -Dfifo=false \
             -Dhttpd=false -Dpipe=false -Drecorder=false \
             -Dsnapcast=false \
+            --wrap-mode nofallback \
             output/mini
 
       - name: Build Mini
