pipewire/meson.build: add "include_type:system"
This suppresses a compiler warning due to sloppy code in PipeWire:

 /usr/include/spa-0.2/spa/utils/json-core.h:440:29: error: implicit conversion increases floating-point precision: 'float' to 'double' [-Werror,-Wdouble-promotion]
   440 |         return spa_dtoa(str, size, val);
       |                ~~~~~~~~            ^~~

--- a/src/lib/pipewire/meson.build
+++ b/src/lib/pipewire/meson.build
@@ -1,4 +1,6 @@
-pipewire_dep = dependency('libpipewire-0.3', required: get_option('pipewire'))
+pipewire_dep = dependency('libpipewire-0.3',
+                          include_type: 'system',
+                          required: get_option('pipewire'))
 conf.set('ENABLE_PIPEWIRE', pipewire_dep.found())
 if not pipewire_dep.found()
   subdir_done()
