subprojects: add liburing

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ project(
     'gtest:default_library=static',
     'libmicrohttpd:default_library=static',
     'libnpupnp:default_library=static',
+    'liburing:default_library=static',
     'sqlite3:default_library=static',
     'vorbis:default_library=static',
 
@@ -27,6 +28,7 @@ project(
     'gtest:warning_level=0',
     'libmicrohttpd:warning_level=0',
     'libnpupnp:warning_level=0',
+    'liburing:warning_level=0',
     'sqlite3:warning_level=0',
     'vorbis:warning_level=0',
   ],
