meson.build: build libnpupnp and libmicrohttpd statically as submodules

--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,8 @@ project(
     'id3tag:default_library=static',
     'lame:default_library=static',
     'libmpdclient:default_library=static',
+    'libmicrohttpd:default_library=static',
+    'libnpupnp:default_library=static',
     'liburing:default_library=static',
     'ogg:default_library=static',
     'openssl:default_library=static',
@@ -42,6 +44,8 @@ project(
     'id3tag:warning_level=0',
     'lame:werror=false',
     'lame:warning_level=0',
+    'libmicrohttpd:warning_level=0',
+    'libnpupnp:warning_level=0',
     'liburing:warning_level=0',
     'sqlite3:warning_level=0',
     'oggiopus:werror=false',
