lib/curl/meson.build: add missing internal dependency on libevent.a

--- a/src/lib/curl/meson.build
+++ b/src/lib/curl/meson.build
@@ -24,6 +24,7 @@ curl = static_library(
   'Form.cxx',
   include_directories: inc,
   dependencies: [
+    event_dep,
     log_dep,
     curl_dep,
   ],
