lib/nfs/meson.build: add missing dependency on libevent.a

--- a/src/lib/nfs/meson.build
+++ b/src/lib/nfs/meson.build
@@ -15,6 +15,7 @@ nfs = static_library(
   'Blocking.cxx',
   include_directories: inc,
   dependencies: [
+    event_dep,
     nfs_dep,
     log_dep,
   ],
@@ -23,6 +24,7 @@ nfs = static_library(
 nfs_dep = declare_dependency(
   link_with: nfs,
   dependencies: [
+    event_dep,
     nfs_dep,
   ],
 )
