test/meson.build: add missing dependencies on libevent.a

--- a/test/meson.build
+++ b/test/meson.build
@@ -123,6 +123,7 @@ if zeroconf_dep.found()
     include_directories: inc,
     dependencies: [
       zeroconf_dep,
+      event_dep,
       util_dep,
     ],
   )
@@ -238,6 +239,7 @@ if neighbor_glue_dep.found()
     include_directories: inc,
     dependencies: [
       neighbor_glue_dep,
+      event_dep,
     ],
   )
 endif
@@ -321,6 +323,7 @@ if curl_dep.found()
     include_directories: inc,
     dependencies: [
       curl_dep,
+      event_dep,
     ],
   )
 
